# PacFleet

./: .gitignore  README.md
fleet_description/: CMakeLists.txt  package.xml
fleet_description/urdf/: ugv.urdf.xacro
fleet_interfaces/: CMakeLists.txt  package.xml
fleet_interfaces/action/: NavigateToWaypoint.action
fleet_interfaces/msg/: Detection.msg  FleetStatus.msg  RobotStatus.msg  Track.msg
fleet_panel/: CMakeLists.txt  package.xml  plugin_description.xml
fleet_panel/include/fleet_panel/: fleet_panel.hpp
fleet_panel/src/: fleet_panel.cpp
fleet_sim/: package.xml  setup.cfg  setup.py
fleet_sim/fleet_sim/: auction.py  coins.py  hub.py  ops_console.py  threat_classifier.py  tracking.py  ugv_sim.py  world.py  worldmap.py
fleet_sim/launch/: bringup.launch.py
fleet_sim/rviz/: fleet_ops.rviz
fleet_sim/test/: calibrate_features.py  test_auction.py  test_classifier.py  test_pathfind.py  test_tracking.py  test_worldmap.py
promo/: package-lock.json  package.json  tsconfig.json
promo/src/: Caption.tsx  Pacfleet.tsx  Root.tsx  captions.ts
