<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_description</name>
  <version>0.1.0</version>
  <description>URDF/xacro description of the collector robot. One parameterized xacro macro is instanced per robot (chomp / dash / nibble) with its own frame prefix and color.</description>
  <maintainer email="salamaelad@gmail.com">Elad Salama</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
