<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fleet_sim</name>
  <version>0.1.0</version>
  <description>PacFleet: a robot swarm that plays coordinated Pac-Man. Diff-drive robot sim, ground-truth coins, and a central coordinator doing Kalman multi-object tracking, cross-robot fusion, a neural power-pellet detector, and auction-based task allocation.</description>
  <maintainer email="salamaelad@gmail.com">Elad Salama</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>fleet_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>fleet_description</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
